--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.22
+# > Update Date: 2022.12.23
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -37,7 +37,7 @@ no-ipv6
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
-# > 域名指定DNS映射
+# > 域名指定 DNS 映射
 server=/*.tw/1.1.1.1
 # > Firebase Cloud Messaging
 address=/mtalk.google.com/108.177.125.188
@@ -46,60 +46,53 @@ server=/dl.google.com/119.29.29.29
 server=/dl.l.google.com/119.29.29.29
 server=/update.googleapis.com/119.29.29.29
 # > Apple
-server=/testflight.apple.com/8.8.4.4
 server=/apple.com/223.5.5.5
-server=/*.appsto.re/223.5.5.5
-server=/*.aaplimg.com/223.5.5.5
-server=/*.apple-dns.net/223.5.5.5
-server=/*.apple.co/223.5.5.5
-server=/*.applestore.com/223.5.5.5
-server=/*.apple.com.cn/223.5.5.5
-server=/*.cdn-apple.com/223.5.5.5
-server=/*.apple-cloudkit.com/223.5.5.5
-server=/*.crashlytics.com/223.5.5.5
-server=/*.icloud.com/223.5.5.5
-server=/*.icloud.com.cn/223.5.5.5
-server=/*.icloud-content.com/223.5.5.5
-server=/*.me.com/223.5.5.5
-server=/*.mzstatic.com/223.5.5.5
-server=/*.organicfruitapps.com/223.5.5.5
-server=/*.apple.com.akadns.net/223.5.5.5
-server=/*.icloud.com.akadns.net/223.5.5.5
+server=/*icloud.com/223.5.5.5
+server=/*icloud.com.cn/223.5.5.5
+server=/testflight.apple.com/8.8.4.4
 # > Alibaba
 server=/*.alicdn.com/223.5.5.5
+server=/aliyun.com/223.5.5.5
 server=/*.aliyun.com/223.5.5.5
+server=/taobao.com/223.5.5.5
 server=/*.taobao.com/223.5.5.5
+server=/tmall.com/223.5.5.5
 server=/*.tmall.com/223.5.5.5
-# > Tencent
+# > JD
+server=/jd.com/119.29.29.29
 server=/*.jd.com/119.29.29.29
+# > Tencent
 server=/*.qq.com/119.29.29.29
 server=/*.tencent.com/119.29.29.29
+server=/weixin.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
+# > bilibili
+server=/bilibili.com/119.29.29.29
 server=/*.bilibili.com/119.29.29.29
 server=/hdslb.com/119.29.29.29
 # > NetEase
+server=/163.com/119.29.29.29
 server=/*.163.com/119.29.29.29
+server=/126.com/119.29.29.29
 server=/*.126.com/119.29.29.29
 server=/*.126.net/119.29.29.29
 server=/*.127.net/119.29.29.29
 server=/*.netease.com/119.29.29.29
 # > xiaomi
+server=/mi.com/119.29.29.29
 server=/*.mi.com/119.29.29.29
+server=/xiaomi.com/119.29.29.29
 server=/*.xiaomi.com/119.29.29.29
-# > Others
-server=/*.unicompayment.com/119.29.29.29
-server=/*.vercel.com/119.29.29.29
-server=/*.vercel.app/119.29.29.29
-server=/*.ximalaya.com/119.29.29.29
 # > Baidu
 server=/*.baidu.com/119.29.29.29
 server=/*.bdstatic.com/119.29.29.29
-# > Routers
-server=/router.asus.com/system
-server=/tplogin.cn/system
-server=/tplinklogin.net/system
+# > Others
+server=/*.unicompayment.com/119.29.29.29
+server=/*.ximalaya.com/119.29.29.29
+server=/*.vercel.com/119.29.29.29
+server=/*.vercel.app/119.29.29.29
 
-# > 启用DoH3
+# > 启用 DoH3 (DNS over HTTP/3)
 ;prefer-doh3
 # > DoH加密DNS服务器
 doh-server=https://dns.alidns.com/dns-query,https://doh.pub/dns-query
