--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -69,28 +69,28 @@ dns:
     - https://doh.pub/dns-query
 
   hosts:
-  # > host，支持通配符（例如: *.clash.dev, *.foo.*.example.com ）
-  # > 不使用通配符的域名优先级高于使用通配符的域名 (例如: foo.example.com > *.example.com > .example.com )
-  # > 注意: +.foo.com 的效果等同于 .foo.com 和 foo.com
+  # host，支持通配符（例如: *.clash.dev, *.foo.*.example.com ）
+  # 不使用通配符的域名优先级高于使用通配符的域名 (例如: foo.example.com > *.example.com > .example.com )
+  # 注意: +.foo.com 的效果等同于 .foo.com 和 foo.com
     '*.tw': 1.1.1.1
     'localhost' : 127.0.0.1
-  # > IPv6
+  # IPv6
     'ip6-localhost': '::1'
     'ip6-loopback': '::1'
   nameserver-policy:
-  # > 域名指定 DNS 映射
-  # > Firebase Cloud Messaging
+  # 域名指定 DNS 映射
+  # Firebase Cloud Messaging
     'mtalk.google.com' : 108.177.125.188
-  # > Google Dl
+  # Google Dl
     'dl.google.com' : 119.29.29.29
     'dl.l.google.com' : 119.29.29.29
     'update.googleapis.com' : 119.29.29.29
-  # > Apple
+  # Apple
     'apple.com' : 223.5.5.5
     '*icloud.com' : 223.5.5.5
     '*icloud.com.cn' : 223.5.5.5
     '*testflight.apple.com': 8.8.4.4
-  # > Alibaba
+  # Alibaba
     '*.alipay*.com': 223.5.5.5
     '*.alicdn.com': 223.5.5.5
     'aliyun.com': 223.5.5.5
@@ -99,19 +99,19 @@ dns:
     '*.taobao.com': 223.5.5.5
     'tmall.com': 223.5.5.5
     '*.tmall.com': 223.5.5.5
-  # > JD
+  # JD
     'jd.com': 119.29.29.29
     '*.jd.com': 119.29.29.29
-  # > Tencent
+  # Tencent
     '*.qq.com': 119.29.29.29
     '*.tencent.com': 119.29.29.29
     'weixin.com': 119.29.29.29
     '*.weixin.com': 119.29.29.29
-  # > bilibili
+  # bilibili
     'bilibili.com': 119.29.29.29
     '*.bilibili.com': 119.29.29.29
     'hdslb.com': 119.29.29.29
-  # > NetEase
+  # NetEase
     '163.com': 119.29.29.29
     '*.163.com': 119.29.29.29
     '126.com': 119.29.29.29
@@ -119,29 +119,28 @@ dns:
     '*.126.net': 119.29.29.29
     '*.127.net': 119.29.29.29
     '*.netease.com': 119.29.29.29
-  # > xiaomi
+  # xiaomi
     'mi.com': 119.29.29.29
     '*.mi.com': 119.29.29.29
     'xiaomi.com': 119.29.29.29
     '*.xiaomi.com': 119.29.29.29
-  # > Baidu
+  # Baidu
     '*.baidu.com': 119.29.29.29
     '*.bdstatic.com': 119.29.29.29
-  # > Others
+  # Others
     '*.unicompayment.com': 119.29.29.29
     '*.ximalaya.com': 119.29.29.29
     '*.vercel.app': 119.29.29.29
     '*.vercel.com': 119.29.29.29
-  # > Local Area Network
+  # Local Area Network
     '*.lan': system
 
 proxies:
   # 本地服务器
 
 proxy-providers:
-
-  #全部节点
-  subs: &subs #建立锚点
+  # 远程订阅
+  subs: &subs # 建立锚点
     type: http
     url: ""
     # 请使用Clash类型订阅链接填入引号""内使用。
