--- a/Surfboard/Config/Surfboard-Evolve.conf
+++ b/Surfboard/Config/Surfboard-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surfboard Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.22
+# > Update Date: 2022.12.23
 
 # 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -10,7 +10,7 @@
 loglevel = info
 
 # > DNS服务器
-dns-server = system,119.29.29.29,223.5.5.5,114.114.114.114
+dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 
 # > 加密的DNS服务器
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
@@ -41,68 +41,61 @@ socks5-listen = 127.0.0.1:1235
 udp-policy-not-supported-behaviour = REJECT
 
 [Host]
-# > 域名指定DNS映射
+# > 域名指定 DNS 映射
 *.tw = server:1.1.1.1
+localhost = 127.0.0.1
 # > Firebase Cloud Messaging
 mtalk.google.com = 108.177.125.188
 # > Google Dl
 dl.google.com = server:119.29.29.29
 dl.l.google.com = server:119.29.29.29
 update.googleapis.com = server:119.29.29.29
-localhost = 127.0.0.1
 # > Apple
 apple.com = server:223.5.5.5
-*.appsto.re = server:223.5.5.5
-*.aaplimg.com = server:223.5.5.5
-*.apple-dns.net = server:223.5.5.5
-*.apple.co = server:223.5.5.5
-*.applestore.com = server:223.5.5.5
-*.apple.com.cn = server:223.5.5.5
-*.cdn-apple.com = server:223.5.5.5
-*.apple-cloudkit.com = server:223.5.5.5
-*.crashlytics.com = server:223.5.5.5
-*.icloud.com = server:223.5.5.5
-*.icloud.com.cn = server:223.5.5.5
-*.icloud-content.com = server:223.5.5.5
-*.me.com = server:223.5.5.5
-*.mzstatic.com = server:223.5.5.5
-*.organicfruitapps.com = server:223.5.5.5
-*.apple.com.akadns.net = server:223.5.5.5
-*.icloud.com.akadns.net = server:223.5.5.5
+*icloud.com = server:223.5.5.5
+*icloud.com.cn = server:223.5.5.5
 *testflight.apple.com = server:8.8.4.4
 # > Alibaba
-*.taobao.com = server:223.6.6.6
-*.tmall.com = server:223.6.6.6
 *.alicdn.com = server:223.5.5.5
+aliyun.com = server:223.5.5.5
 *.aliyun.com = server:223.5.5.5
-# > Tencent
+taobao.com = server:223.6.6.6
+*.taobao.com = server:223.6.6.6
+tmall.com = server:223.6.6.6
+*.tmall.com = server:223.6.6.6
+# > JD
+jd.com = server:119.29.29.29
 *.jd.com = server:119.28.28.28
+# > Tencent
 *.qq.com = server:119.28.28.28
 *.tencent.com = server:119.28.28.28
+weixin.com = server:119.28.28.28
 *.weixin.com = server:119.28.28.28
+# > bilibili
+bilibili.com = server:119.29.29.29
 *.bilibili.com = server:119.29.29.29
 hdslb.com = server:119.29.29.29
 # > NetEase
+163.com = server:119.29.29.29
 *.163.com = server:119.29.29.29
+126.com = server:119.29.29.29
 *.126.com = server:119.29.29.29
 *.126.net = server:119.29.29.29
 *.127.net = server:119.29.29.29
 *.netease.com = server:119.29.29.29
 # > xiaomi
+mi.com = server:119.29.29.29
 *.mi.com = server:119.29.29.29
+xiaomi.com = server:119.29.29.29
 *.xiaomi.com = server:119.29.29.29
+# > Baidu
+*.baidu.com = server:119.29.29.29
+*.bdstatic.com = server:119.29.29.29
 # > Others
 *.unicompayment.com = server:119.29.29.29
 *.ximalaya.com = server:119.29.29.29
 *.vercel.app = server:119.29.29.29
 *.vercel.com = server:119.29.29.29
-# > Baidu
-*.baidu.com = server:119.29.29.29
-*.bdstatic.com = server:119.29.29.29
-# > Routers
-router.asus.com = server:syslib // Asus Router
-tplogin.cn = server:syslib // TP-Link Router
-tplinklogin.net = server:syslib // TP-Link Router
 # > Local Area Network
 *.lan = server:syslib
 
