--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -43,9 +43,9 @@ use-default-policy-if-wifi-not-primary = false
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, sequoia.apple.com
 
 # > 路由防火墙
-# 包含所有网络请求
+# > 包含所有网络请求
 include-all-networks = false
-# 包含本地网络请求
+# > 包含本地网络请求
 include-local-networks = false
 
 # > 日志等级
