--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,11 +1,11 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.23
+# > Update Date: 2022.12.24
 
 [General]
 # > 增强版 Wi-Fi 助理
-# 在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭：false,开启把false修改为true即可。
+# >在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认关闭：false,开启把false修改为true即可。
 wifi-assist = false
 # > 混合网络 Hybrid Network（建议关闭、无限流量或者超出套餐流量不限速可选择开启）
 all-hybrid = false
@@ -82,7 +82,7 @@ read-etc-hosts = true
 use-local-host-item-for-proxy = false
 
 # > UDP IP 防泄漏
-# 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
+# > 如果没有代理服务器支持 UDP 转发，可修改为「direct」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
 udp-policy-not-supported-behaviour = REJECT
 
 # > 提高处理 UDP 流量优先级            
@@ -95,12 +95,12 @@ udp-policy-not-supported-behaviour = REJECT
 hide-vpn-icon = false
 
 # > HTTP-API
-# 依次为：密码，主机名，端口(xxxxxx改成你自定义的密码）
+# > 依次为：密码，主机名，端口(xxxxxx改成你自定义的密码）
 http-api = xxxxxx@0.0.0.0:6170
 # > HTTP-API-TLS
 http-api-tls = false
 # > Web控制器
-# Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
+# > Safari输入127.0.0.1:6171,填入HTTP-API密码即可。
 http-api-web-dashboard = true
 
 [Replica]
