--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -1,39 +1,48 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.23
+# > Update Date: 2022.12.24
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
 [general]
 # > 服务器测试链接
 server_check_url= http://cp.cloudflare.com/generate_204
+
 # > 节点延迟测试超时参数，需小于 5000 毫秒才生效
 server_check_timeout=2000
+
 # > 资源解析器，可用于自定义各类远程资源的转换，如节点，规则，复写等
 resource_parser_url= https://cdn.jsdelivr.net/gh/KOP-XIAO/QuantumultX@master/Scripts/resource-parser.js
+
 # > 用于节点页面的节点信息展示，可完整自定义展示内容与方式
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/Orz-3/Orz-3/master/QuantumultX/IP.js
+
 # > iCloud同步配置文件图标
 ;profile_img_url= https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/img/dragonball/1.PNG
+
 # > 根据网络自动切换 分流/直连/全局代理 等模式
 ;running_mode_trigger=filter, filter, asus-5g:all_direct, asus: all_proxy
+
 # > 列表中的域名将不使用fake-ip方式. 其它域名则全部采用 fake-ip 及远程解析的模式
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me
+
 # > UDP回退策略参数的值仅支持末端策略（末端策略为经由规则模块和策略模块后所命中的策略，例如：direct、reject 以及节点；不支持内置策略 proxy 以及其它自定义策略）
 ;fallback_udp_policy=direct
+
 # > 以下列表中的内容将不经过 QuantumultX的处理，设置后建议重启设备
 excluded_routes=239.255.255.250/32
+
 # > UDP白名单
 udp_whitelist=1-442, 444-65535
 
-# > DNS服务器
+# > DNS模块设置
 [dns]
 # > 禁用系统DNS
 no-system
 # > 禁用IPV6
 no-ipv6
-# > DNS
+# > DNS服务器
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
