--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # > Loon Config
-# > Update Date: 2022.12.23
+# > Update Date: 2022.12.24
 # > author: Coldvvater
 # > GitHub主页: https://github.com/Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
@@ -10,30 +10,40 @@
 [General]
 # > IPv6 支持
 ipv6 = false
+
 # > 跳过某个域名或者IP段
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, 17.0.0.0/8, localhost, *.local, *.crashlytics.com, www.baidu.com, yunbusiness.ccb.com
+
 # > Tun 旁路路由
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
+
 # > 解决一些ip请求无法匹配域名类规则的问题。real-ip指定的域名将不返回fake ip响应，直接将dns请求发往目标dns服务器
 real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
-# > DNS 服务器
+
+# > DNS服务器
 dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
-# > DoH 服务器
+
+# > DoH加密DNS服务器
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+
 # > Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
 allow-udp-proxy = false
 allow-wifi-access = false
 wifi-access-http-port = 7222
 wifi-access-socket5-port = 7221
+
 # > 代理测速 URL
 proxy-test-url = http://cp.cloudflare.com/generate_204
 # > 测速超时 (s)
 test-timeout = 5
+
 # > 解析器
 resource-parser = https://raw.githubusercontent.com/Peng-YM/Sub-Store/master/backend/dist/sub-store-parser.loon.min.js
+
 # ssid-trigger参数，用于指定SSID下流量模式切换，（default表示默认，cellular表示蜂窝，目前支持三种值：rule，direct，proxy） 
 # ssid-trigger="default":rule,"cellular":rule,"ASUS":direct,"TPLINK":proxy 
+
 # > 接口模式
 interface-mode = auto
 
