--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.24
+# > Update Date: 2022.01.28
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -200,6 +200,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > 国内网站分流
 # RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
 
+# 防止应用循环请求
+IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 # > Local Area Network 局域网指定分流
 RULE-SET,LAN,DIRECT
 # > ASN China 分流
