--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -200,7 +200,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # > 国内网站分流
 # RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
 
-# 防止应用循环请求
+# > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 # > Local Area Network 局域网指定分流
 RULE-SET,LAN,DIRECT
