--- a/Egern/Module/Adblock/YouTubeAds.yaml
+++ b/Egern/Module/Adblock/YouTubeAds.yaml
@@ -1,13 +1,21 @@
-#!name=YouTube去广告 
-#!desc=去除 Youtube 广告（Beta）
-# IOS >= 15
-# 删除 瀑布流、视频、搜索中出现的广告和Shorts，
+#!name=去除 Youtube 广告 
+#!desc=去除 Youtube 广告 (IOS >= 15)
+
+# > Feature
+# 删除 瀑布流、视频、搜索中出现的广告和Shorts
 # 删除 Shorts 内的视频广告
 # 删除 底部 上传 按钮
-# 增加 画中画(PIP)
+# 增加 画中画(PIP), 后台播放 (Beta)
+
+# > Note
 # 广告信息会有遗漏，可能偶现广告
-# author by @Maasea
-# inspired by @Choler & @DivineEngine & @app2smile
+# 该模块已足够全面，无需其他规则混用，防止重写规则被破坏
+# 不支持 Mock 的客户端可以用 reject-200/reject-img 替代
+
+# > author
+# @Maasea
+# > Credit 
+# @Choler & @DivineEngine & @app2smile
 
 url_rewrites:
   - match: ^https?:\/\/[\w-]+\.googlevideo\.com\/initplayback.+&oad
