--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.01.28
+# > Update Date: 2022.02.10
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -57,8 +57,6 @@ show-error-page-for-reject = true
 # > 返回真实IP Hosts
 always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com*.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.battlenet.com.cn, *.battlenet.com, *.blzstatic.cn, *.battle.net
 
-# > Hijack DNS
-# hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > VIF Excluded Routes
 # Surge VIF 只能处理 TCP 和 UDP 协议。使用此选项可以绕过特定的 IP 范围，允许所有流量通过。
 # tun-excluded-routes = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 239.255.255.250/32
@@ -73,6 +71,8 @@ exclude-simple-hostnames = true
 dns-server = 223.5.5.5, 119.29.29.29, 114.114.114.114
 # > 加密的DNS服务器(如无必要不建议使用)
 # encrypted-dns-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+# > Hijack DNS
+hijack-dns = 8.8.8.8:53, 8.8.4.4:53
 # > 关闭 DOH 的服务端证书验证
 doh-skip-cert-verification=true
 # > etc/hosts 读取 DNS 记录
@@ -198,20 +198,20 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Microsoft
 
 # > 国内网站分流
-# RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
 
 # > 防止应用循环请求
 IP-CIDR,0.0.0.0/32,REJECT,no-resolve
+
 # > Local Area Network 局域网指定分流
 RULE-SET,LAN,DIRECT
-# > ASN China 分流
-RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
+
+# > ASN China
+#RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
+
 # > GeoIP China
-# GEOIP,CN,DIRECT
-# > DEST-PORT 端口规则//邮件服务默认端口
-OR,((DEST-PORT,25), (DEST-PORT,110), (DEST-PORT,143)),DIRECT
-# > NTP服务默认端口
-AND,((OR,((DOMAIN,time-ios.apple.com), (DOMAIN,time.apple.com), (DOMAIN-SUFFIX,pool.ntp.org))), (DEST-PORT,123)),DIRECT
+GEOIP,CN,DIRECT
+
 # > DNS 查询失败走 Final 规则
 FINAL,Final,dns-failed
 
@@ -279,13 +279,13 @@ xiaomi.com = server:119.29.29.29
 
 [Panel]
 策略面板 = script-name=解锁检测,update-interval=7200
-策略面板 = script-name=备用机场,update-interval=1800
-策略面板 = script-name=主力机场,update-interval=1800
+#策略面板 = script-name=备用机场,update-interval=1800
+#策略面板 = script-name=主力机场,update-interval=1800
 
 [Script]
 解锁检测 = type=generic,timeout=30,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/Stream-All.js,script-update-interval=0,argument=title=解锁检测&icon=tv.circle&color=#FF2121
-备用机场 = type=generic,timeout=15,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/sub_info_panel.js,script-update-interval=3600,argument=url=[填写URL encode 后的机场节点链接]&reset_day=[填写流量重置日]&title=[填写机场名字]&icon=airplane.circle&color=#00BC12
-主力机场 = type=generic,timeout=15,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/sub_info_panel.js,script-update-interval=3600,argument=url=[填写URL encode 后的机场节点链接]&reset_day=[填写流量重置日]&title=[填写机场名字]&icon=airplane.circle.fill&color=#157EFB
+#备用机场 = type=generic,timeout=15,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/sub_info_panel.js,script-update-interval=3600,argument=url=[填写URL encode 后的机场节点链接]&reset_day=[填写流量重置日]&title=[填写机场名字]&icon=airplane.circle&color=#00BC12
+#主力机场 = type=generic,timeout=15,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/sub_info_panel.js,script-update-interval=3600,argument=url=[填写URL encode 后的机场节点链接]&reset_day=[填写流量重置日]&title=[填写机场名字]&icon=airplane.circle.fill&color=#157EFB
 
 [MITM]
 # > VIF 对原始 TCP 流量进行解密
