--- a/Shadowrocket/Config/Shadowrocket-Evolve.conf
+++ b/Shadowrocket/Config/Shadowrocket-Evolve.conf
@@ -1,7 +1,7 @@
 # > Shadowrocket Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.02.07
+# > Update Date: 2022.02.10
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -133,16 +133,16 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,Microsoft
 
 # > 国内网站分流
-# RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list,Domestic
 
 # > 局域网
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list,DIRECT
 
-# > IP-ASN规则
-RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
+# > ASN China 分流，删除注释启用
+# RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
 
 # > 最终规则
-# GEOIP,CN,DIRECT
+GEOIP,CN,DIRECT
 FINAL,Final
 
 [Host]
@@ -206,8 +206,9 @@ xiaomi.com = server:119.29.29.29
 
 # > 复写规则
 [URL Rewrite]
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
+^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
+^https?:\/\/(www.)?(g|google)\.com.hk https://www.google.com 302
+
 (?<=_region=)CN(?=&) JP 307
 (?<=&mcc_mnc=)4 2 307
 ^(https?:\/\/(tnc|dm)[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
@@ -215,4 +216,4 @@ xiaomi.com = server:119.29.29.29
 
 # > 证书及主机名
 [MITM]
-hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,www.google.cn,www.g.cn
+hostname = *.tiktokv.com,*.byteoversea.com,*.tik-tokapi.com,*.google.cn, *.google.com.hk
