--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.12.24
+# > Update Date: 2022.02.10
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -104,7 +104,7 @@ server=/*.vercel.app/119.29.29.29
 # > 启用 DoH3 (DNS over HTTP/3)
 ;prefer-doh3
 # > DoH加密DNS服务器
-doh-server=https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+;doh-server=https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 
 # > 策略组
 [policy]
@@ -179,9 +179,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Quant
 # > 微软服务
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Microsoft/Microsoft.list, tag=Microsoft, force-policy=Microsoft, update-interval=172800, opt-parser=false, enabled=true
 # > 国内网站
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, tag=Domestic, force-policy=Domestic, update-interval=172800, opt-parser=true, enabled=false
-# > IP-ASN规则
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, tag=IP-ASN, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, tag=Domestic, force-policy=Domestic, update-interval=172800, opt-parser=true, enabled=true
+# > ASN China
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, tag=ASN-China, force-policy=direct, update-interval=172800, opt-parser=true, enabled=false
 
 # > 远程重写规则
 [rewrite_remote]
