--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,5 +1,5 @@
 # > Loon Config
-# > Update Date: 2022.12.24
+# > Update Date: 2022.02.10
 # > author: Coldvvater
 # > GitHub主页: https://github.com/Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
@@ -24,7 +24,7 @@ real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xb
 dns-server = 223.5.5.5,119.29.29.29,114.114.114.114
 
 # > DoH加密DNS服务器
-doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
+#doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 
 # > Wi-Fi 访问
 # > 允许 Wi-Fi 网络下其它设备访问
@@ -204,9 +204,9 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/
 # > 微软分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
 # > 国内网站分流
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=Domestic, tag=Domestic, enabled=false
-# > IP-ASN规则
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=IP-ASN, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list, policy=Domestic, tag=Domestic, enabled=true
+# > ASN China
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=IP-ASN, enabled=false
 
 # > 本地规则
 [Rule]
