--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -227,7 +227,7 @@ ip-cidr, 224.0.0.0/4, DIRECT
 ip6-cidr, fe80::/10, DIRECT
 ip-cidr, 203.107.1.1/24, reject
 ip-cidr, 183.240.197.130/32, direct
-# GEOIP, CN, DIRECT
+GEOIP, CN, DIRECT
 final, Final
 
 # > 本地重写规则
