--- a/Egern/Module/DualSubs/DualSubs.YouTube.yaml
+++ b/Egern/Module/DualSubs/DualSubs.YouTube.yaml
@@ -1,39 +1,30 @@
-#!name=🍿️ DualSubs for YouTube
-#!desc=(V0.4.x) YouTube字幕增强及双语模块
+#!name=🍿️ DualSubs for ▶️ YouTube feat.ADs
+#!desc=(V0.6) YouTube字幕增强及双语模块(配合去广告)
 #!openUrl=http://boxjs.com/#/app/DualSubs.YouTube
 #!author=VirgilClyne
-#!homepage=https://github.com/VirgilClyne
-#!manual=https://github.com/DualSubs/DualSubs
+#!homepage=https://github.com/DualSubs
+#!manual=https://github.com/DualSubs/DualSubs-YouTube/wiki/🍿-DualSubs-for-▶-YouTube
+#!icon=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 
 scriptings:
   - http_response:
-      name: DualSubs.YouTube.Player
+      name: DualSubs.YouTube.Player.response
       script_url: >-
-        https://raw.githubusercontent.com/DualSubs/DualSubs/beta/js/DualSubs.YouTube.Player.beta.js
-      match: ^https?:\/\/(www|m)\.youtube\.com\/youtubei\/v1\/player(\?.*)$
+        https://raw.githubusercontent.com/DualSubs/DualSubs-YouTube/main/js/DualSubs.YouTube.Player.response.js
+      match: ^https?:\/\/(www|m|tv)\.youtube\.com\/youtubei\/v1\/player(\?.*)$
       body_required: true
       timeout: 30
   - http_response:
-      name: DualSubs.YouTube.Player
+      name: DualSubs.YouTube.TimedText.response
       script_url: >-
-        https://raw.githubusercontent.com/DualSubs/DualSubs/beta/js/DualSubs.YouTube.Player.beta.js
-      match: ^https?:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/player(\?.*)$
-      body_required: true
-      timeout: 30
-  - http_request:
-      name: DualSubs.YouTube.TimedText
-      script_url: >-
-        https://raw.githubusercontent.com/DualSubs/DualSubs/beta/js/DualSubs.YouTube.TimedText.request.beta.js
-      match: ^https?:\/\/(www|m)\.youtube\.com\/api\/timedtext(\?.*)$
-  - http_response:
-      name: DualSubs.YouTube.TimedText
-      script_url: >-
-        https://raw.githubusercontent.com/DualSubs/DualSubs/beta/js/DualSubs.YouTube.TimedText.response.beta.js
+        https://raw.githubusercontent.com/DualSubs/DualSubs-YouTube/main/js/DualSubs.YouTube.TimedText.response.js
       match: ^https?:\/\/(www|m)\.youtube\.com\/api\/timedtext(\?.*)$
       body_required: true
 mitm:
   hostnames:
     - www.youtube.com
     - m.youtube.com
+    - tv.youtube.com
     - youtubei.googleapis.com
+
 
