--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -185,8 +185,8 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 
 # > 远程重写规则
 [rewrite_remote]
-# > 微博轻享版（原国际版）去广告
-https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/WeiboLite.conf, tag=WeiboLiteAds, update-interval=172800, opt-parser=false, enabled=true
+# > 微博&微博国际版净化[墨鱼版]
+https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/AdBlock/Weibo.conf, tag=WeiboAds, update-interval=172800, opt-parser=false, enabled=true
 # > 超级搜索引擎
 https://raw.githubusercontent.com/Coldvvater/Mononoke/master/QuantumultX/Rewrite/Tool/Q-Search.qxrewrite, tag=Q-Search, update-interval=172800, opt-parser=false, enabled=true
 # > YouTube去广告
