--- a/Loon/Config/Loon-Evolve.conf
+++ b/Loon/Config/Loon-Evolve.conf
@@ -1,9 +1,7 @@
-# > Loon Config
-# > Update Date: 2022.02.10
-# > author: Coldvvater
-# > GitHub主页: https://github.com/Coldvvater
+# > Loon Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
-# > 具体语法和格式参考：https://github.com/Loon0x00/LoonExampleConfig
+# > GitHub主页: https://github.com/Coldvvater
+# > Update Date: 2022.03.08
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -198,7 +196,7 @@ https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list, 
 # > 电报ASN
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 # > 国外网站分流
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list, policy=Foreign, tag=Foreign, enabled=true
+https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list, policy=Foreign, tag=Foreign, enabled=true
 # > Apple分流
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 # > 微软分流
