--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -254,7 +254,7 @@ rule-providers:
     type: http
     behavior: classical
     url: https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/Advertising.yaml
-    path: ./ruleset/AD-Ban.yaml
+    path: ./ruleset/Advertising.yaml
     interval: 86400
 
   Privacy: # > 隐私保护
