--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -1,7 +1,7 @@
 # > Stash Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2023.03.09
+# > Update Date: 2023.03.16
 ---
 subscribe-url: 填上你的订阅链接
 # > 替换上面文字用于Stash获取机场流量信息并在主页显示
@@ -250,7 +250,7 @@ rule-providers:
     path: ./ruleset/Unbreak.yaml
     interval: 86400
 
-  AdBlock: # > 广告拦截
+  Advertising: # > 广告拦截
     type: http
     behavior: classical
     url: https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/Advertising.yaml
@@ -341,17 +341,17 @@ rule-providers:
     path: ./ruleset/Lan.yaml
     interval: 86400
 
-  ASN-CN: # > ASN China
+  ASN_China: # > ASN China
     type: http
     behavior: classical
     url: https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/ASN_China.yaml
-    path: ./ruleset/ASN-CN.yaml
+    path: ./ruleset/ASN_China.yaml
     interval: 86400
 
 rules:
   # > 分流规则引用
   - RULE-SET,Unbreak,DIRECT
-  - RULE-SET,AdBlock,AdBlock
+  - RULE-SET,Advertising,AdBlock
   - RULE-SET,Privacy,AdBlock
   - RULE-SET,Hijacking,AdBlock
   - RULE-SET,BiliBili,BiliBili
@@ -365,6 +365,6 @@ rules:
   - RULE-SET,Domestic,Domestic
   - RULE-SET,LAN,DIRECT
   # > ASN China 分流，删除注释启用
-  #- RULE-SET,ASN-CN,DIRECT
+  #- RULE-SET,ASN_China,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,Final
