--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -1,7 +1,7 @@
 # > Surge Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.03.09
+# > Update Date: 2022.03.28
 
 [General]
 # > 增强版 Wi-Fi 助理
@@ -185,8 +185,8 @@ RULE-SET,https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Surge/T
 # > 国际流媒体
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list,Streaming
 
-# > 电报ASN
-RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list,Telegram
+# > 电报分流
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Telegram/Telegram.list,Telegram
 
 # > 国外网站分流
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list,Foreign
@@ -205,9 +205,6 @@ IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 
 # > Local Area Network 局域网指定分流
 RULE-SET,LAN,DIRECT
-
-# > ASN China
-#RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
 
 # > GeoIP China
 GEOIP,CN,DIRECT
