--- a/Surge/Config/Surge-Evolve.conf
+++ b/Surge/Config/Surge-Evolve.conf
@@ -206,6 +206,9 @@ IP-CIDR,0.0.0.0/32,REJECT,no-resolve
 # > Local Area Network 局域网指定分流
 RULE-SET,LAN,DIRECT
 
+# > ASN China
+#RULE-SET,https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list,DIRECT
+
 # > GeoIP China
 GEOIP,CN,DIRECT
 
