--- a/QuantumultX/Config/QuantumultX-Evolve.conf
+++ b/QuantumultX/Config/QuantumultX-Evolve.conf
@@ -1,7 +1,7 @@
 # > QuantumultX Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2022.03.09
+# > Update Date: 2022.03.28
 
 # > 如需使用自定义 GeoIP 文件，可在「其他设置」里「GeoLite2」的「来源」填写使用「 https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb 」 并开启「自动更新」
 
@@ -171,7 +171,7 @@ https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Quantumult-X/Tik
 # > 国际媒体
 https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list, tag=Streaming, force-policy=Streaming, update-interval=172800, opt-parser=true, enabled=true
 # > 电报信息
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Telegram.list, tag=Telegram, force-policy=Telegram, update-interval=172800, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/Telegram/Telegram.list, tag=Telegram, force-policy=Telegram, update-interval=172800, opt-parser=false, enabled=true
 # > 国外网站
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list, tag=Foreign, force-policy=Foreign, update-interval=172800, opt-parser=true, enabled=true
 # > 苹果服务
