--- a/Stash/RuleSet/OpenAI.yaml
+++ b/Stash/RuleSet/OpenAI.yaml
@@ -5,3 +5,4 @@ payload:
   - DOMAIN-SUFFIX,ai.com
   - DOMAIN,cdn.auth0.com
   - DOMAIN,openaiapi-site.azureedge.net
+  - DOMAIN-SUFFIX,challenges.cloudflare.com
