--- a/Egern/RuleSet/rules/OpenAI.yaml
+++ b/Egern/RuleSet/rules/OpenAI.yaml
@@ -3,6 +3,7 @@
 domain_suffix_set:
   - ' openai.com'
   - ' ai.com'
+  - ' challenges.cloudflare.com'
 domain_set:
   - ' cdn.auth0.com'
   - ' openaiapi-site.azureedge.net'
