--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -275,10 +275,10 @@ rule-providers:
     url: "https://ghproxy.com/https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Unbreak.yaml"
     path: ./ruleset/Unbreak.yaml
 
-  AdBlock: # 广告拦截
+  Advertising: # 广告拦截
     <<: *c
     url: "https://ghproxy.com/https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/Advertising.yaml"
-    path: ./ruleset/AdBlock.yaml
+    path: ./ruleset/Advertising.yaml
 
   Privacy: # 隐私保护
     <<: *c
