--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -1,6 +1,6 @@
 # > Stash Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
-# > GitHub主页: https://github.com/Coldvvater
+# > GitHub: https://github.com/Coldvvater
 # > Update Date: 2023.04.05
 ---
 subscribe-url: 填上你的订阅链接
@@ -264,7 +264,7 @@ rule-providers:
 
   Telegram: # > 电报信息
     <<: *c
-    url: https://raw.githubusercontent.com/Coldvvater/Mononoke/master/Stash/RuleSet/ASN_Telegram.yaml
+    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.yaml
 
   Foreign: # > 国外网站
     <<: *c
