--- a/Clash/Config/Clash-Evolve.yaml
+++ b/Clash/Config/Clash-Evolve.yaml
@@ -1,7 +1,7 @@
 # Clash Config Make by Coldvvater
 # TG Channel: https://t.me/Ison_Channel
 # GitHub: https://github.com/Coldvvater
-# Update Date: 2023.04.05
+# Update Date: 2023.04.08
 
 subscribe-url: 填上你的订阅链接
 # 替换上面文字用于Stash获取机场流量信息并在主页显示
@@ -308,7 +308,7 @@ rule-providers:
 
   Foreign: # 国外网站
     <<: *c
-    url: "https://ghproxy.com/https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/ProxyLite.yaml"
+    url: "https://ghproxy.com/https://raw.githubusercontent.com/DivineEngine/Profiles/master/Clash/RuleSet/Global.yaml"
     path: ./ruleset/Foreign.yaml
 
   Apple: # 苹果服务
@@ -333,6 +333,7 @@ rule-providers:
 
 rules:
   # 分流规则引用
+  - SCRIPT,quic,REJECT
   - RULE-SET,Unbreak,DIRECT
   - RULE-SET,Advertising,AdBlock
   - RULE-SET,Privacy,AdBlock
@@ -349,4 +350,6 @@ rules:
   - RULE-SET,LAN,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,Final
-
+script:
+  shortcuts:
+    quic: network == 'udp' and dst_port == 443
