--- a/Stash/Config/Stash-Evolve.yaml
+++ b/Stash/Config/Stash-Evolve.yaml
@@ -1,7 +1,7 @@
 # > Stash Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
 # > GitHub: https://github.com/Coldvvater
-# > Update Date: 2023.04.05
+# > Update Date: 2023.04.08
 ---
 subscribe-url: 填上你的订阅链接
 # > 替换上面文字用于Stash获取机场流量信息并在主页显示
@@ -20,7 +20,7 @@ bind-address:
   # > 单个ip6地址
 mode: rule
   # > clash工作模式（rule/global/direct）
-log-level: debug
+log-level: info
   # > 日志等级（info/warning/error/debug/silent）
 external-controller: 127.0.0.1:9090
   # > 控制器监听地址
@@ -273,7 +273,7 @@ rule-providers:
 
   Apple: # > 苹果服务
     <<: *c
-    url: https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.yaml
+    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Providers/Ruleset/Apple.yaml
 
   Microsoft: # > 微软服务
     <<: *c
