--- a/Shadowrocket/Config/Shadowrocket-Evolve.conf
+++ b/Shadowrocket/Config/Shadowrocket-Evolve.conf
@@ -1,7 +1,7 @@
 # > Shadowrocket Config Make by Coldvvater
 # > TG Channel: https://t.me/Ison_Channel
-# > GitHub主页: https://github.com/Coldvvater
-# > Update Date: 2023.03.28
+# > GitHub: https://github.com/Coldvvater
+# > Update Date: 2023.04.08
 
 # > 自选GEOIP库可以使用: https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
@@ -127,7 +127,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/DivineEngine/Profiles/master/Surge/Ruleset/Global.list,Foreign
 
 # > Apple分流
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,Apple
+RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list,Apple
 
 # > 微软分流
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Microsoft/Microsoft.list,Microsoft
